--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "start-dev": "nodemon server/app.js --exec babel-node",
     "build": "babel server -d server/dist --ignore server/dist",
-    "test": "mocha server/tests/ --exit --compilers js:babel-core/register"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "test": "nyc --reporter=html --reporter=text mocha server/tests/ --exit --compilers js:babel-core/register"
+  },
+  "nyc": {
+    "exclude": [
+      "server/tests"
+    ]
   },
   "repository": {
     "type": "git",
@@ -22,8 +28,10 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "coveralls": "^3.0.2",
     "express": "^4.16.3",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "nyc": "^12.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
