--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,7 @@
     "no-restricted-globals": 0,
     "consistent-return": 0,
     "no-alert": 0,
-    "no-unused-vars": [1, { "argsIgnorePattern": "res|next|^err" }],
+    "no-unused-vars": [1, { "argsIgnorePattern": "res|next|^err|Promise" }],
     "comma-dangle": 0,
     "import/no-unresolved": "off",
     "import/extensions": "off",
@@ -19,6 +19,6 @@
     "array-callback-return": 0
   },
   "parserOptions": {
-  	"ecmaVersion": 6
+    "ecmaVersion": 6
   }
 }
