--- a/.eslintrc
+++ b/.eslintrc
@@ -1,24 +1,16 @@
 {
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true,
-    "mocha": true
-  },
-  "extends": "airbnb",
-  "rules": {
-    "no-console": 0,
-    "no-restricted-globals": 0,
-    "consistent-return": 0,
-    "no-alert": 0,
-    "no-unused-vars": [1, { "argsIgnorePattern": "res|next|^err|Promise" }],
-    "comma-dangle": 0,
-    "import/no-unresolved": "off",
-    "import/extensions": "off",
-    "import/no-dynamic-require": 0,
-    "array-callback-return": 0
-  },
-  "parserOptions": {
-    "ecmaVersion": 6
-  }
+	"env": {
+		"es6": true,
+		"browser": true,
+		"node": true,
+		"mocha": true
+	},
+	"extends": "airbnb",
+	"rules": {
+		"no-console": 0,
+		"comma-dangle": 0
+	},
+	"parserOptions": {
+		"ecmaVersion": 6
+	}
 }
