--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.2",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
+    "lodash.isempty": "^4.4.0",
     "morgan": "^1.9.0",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
