--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/slimsolz/MyDiary#readme",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
@@ -35,6 +36,7 @@
     "lodash.isempty": "^4.4.0",
     "morgan": "^1.9.0",
     "nyc": "^12.0.2",
+    "pg-promise": "^8.4.5",
     "validator": "^10.4.0"
   },
   "devDependencies": {
