--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "lodash.isempty": "^4.4.0",
