--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start-dev": "nodemon server/app.js --exec babel-node",
     "build": "babel server -d server/dist --ignore server/dist",
     "coveralls": "nyc report --reporter=text-lcov | coveralls && nyc report --reporter=lcov",
-    "pretest": "npm run db-build-test",
+    "pretest": "npm run db-migrate",
     "test": "cross-env NODE_ENV=test SECRET=testsecret nyc --reporter=html --reporter=text mocha server/tests/ --exit --compilers js:babel-core/register",
-    "db-build-test": "psql -U postgres -f mydiary_test.sql",
-    "db-build": "psql -U postgres -f mydiary.sql"
+    "db-migrate": "babel-node server/models/db.js"
   },
   "nyc": {
     "exclude": [
@@ -43,6 +42,7 @@
     "lodash.isempty": "^4.4.0",
     "morgan": "^1.9.0",
     "nyc": "^12.0.2",
+    "pg": "^7.4.3",
     "pg-promise": "^8.4.5",
     "validator": "^10.4.0"
   },
