--- a/package.json
+++ b/package.json
@@ -26,15 +26,20 @@
   },
   "homepage": "https://github.com/slimsolz/MyDiary#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "coveralls": "^3.0.2",
+    "cross-env": "^5.2.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "lodash.isempty": "^4.4.0",
     "morgan": "^1.9.0",
     "nyc": "^12.0.2",
+    "pg": "^7.4.3",
     "validator": "^10.4.0"
   },
   "devDependencies": {
