--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,8 @@
 		"no-console": 0,
 		"comma-dangle": 0,
 		"no-restricted-globals": 0,
+		"import/extensions": 0,
+		"consistent-return": 0,
 		"no-alert": 0,
 		"no-plusplus": [2, { allowForLoopAfterthoughts: true }],
 		"no-unused-vars": [1, { "argsIgnorePattern": "res|next|^err" }]
