--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "lodash.isempty": "^4.4.0",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "nyc": "^12.0.2",
     "pg": "^7.4.3",
-    "validator": "^10.4.0"
+    "swagger-ui-express": "^3.0.10",
+    "validator": "^10.4.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
