--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "cors": "^2.8.4",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
