--- a/.eslintrc
+++ b/.eslintrc
@@ -13,8 +13,9 @@
 		"import/extensions": 0,
 		"consistent-return": 0,
 		"no-alert": 0,
+		"no-undef": 0,
 		"no-plusplus": [2, { allowForLoopAfterthoughts: true }],
-		"no-unused-vars": [1, { "argsIgnorePattern": "res|next|^err" }]
+		"no-unused-vars": 0
 	},
 	"parserOptions": {
 		"ecmaVersion": 6
