--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "lodash.isempty": "^4.4.0",
-    "moment": "^2.22.2",
+    "morgan": "^1.9.0",
     "nyc": "^12.0.2",
     "pg": "^7.4.3",
     "swagger-ui-express": "^3.0.10",
