--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
 		"import/extensions": 0,
 		"consistent-return": 0,
 		"no-alert": 0,
+		"max-len": 0,
 		"no-undef": 0,
 		"no-plusplus": [2, { allowForLoopAfterthoughts: true }],
 		"no-unused-vars": 0
