--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "lodash": "^4.17.10",
     "lodash.isempty": "^4.4.0",
     "morgan": "^1.9.0",
+    "node-schedule": "^1.3.0",
+    "nodemailer": "^4.6.7",
     "nyc": "^12.0.2",
     "pg": "^7.4.3",
     "swagger-ui-express": "^3.0.10",
